--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -157,6 +157,7 @@
       }
       & img { 
         padding: var(--spacer) calc(var(--spacer) * 3);
+        margin-bottom: var(--spacer);
         @media (max-width: 450px) {
           padding: calc(var(--spacer) * 2) var(--spacer);
         }
@@ -282,8 +283,8 @@
             }
             @media (max-width: 450px) {
               background-image: url('../../images/modern-stack.svg');
-              background-position: 10% 0;
-              background-size: 100%;
+              background-position: -70% 100%;
+              background-size: 80%;
             }
           }
           & .decoration {
@@ -312,7 +313,8 @@
               background-size: 100%;
             }
             @media (max-width: 450px) {
-              background-position: 100%;
+              background-position: -20%;
+              background-size: 80%;
             }
           }
           & .decoration {
@@ -330,7 +332,8 @@
               background-size: 100%;
             }
             @media (max-width: 450px) {
-              background-position: 120% ;
+              background-position: -20% 90%;
+              background-size: 80%;
             }
           }
         }
@@ -360,19 +363,17 @@
             }
           }
           & h4 {
+            padding: calc(var(--spacer) * 1.5) calc(var(--spacer) * 5);
             margin: 0 auto;
             font-size: var(--font-size-base);
-            padding: 0 calc(var(--spacer) * 10);
-            @media (max-width: 450px) {
-              text-align: left;
-            }
-          }
-          & h4 {
-            padding: calc(var(--spacer) * 1.5) calc(var(--spacer) * 5);
+            font-weight: 300;
+            letter-spacing: 2px;
             @media (max-width: 450px) {
               padding: 0;
               text-align: left;
               font-size: calc(var(--font-size-base) * 1.2);
+              padding-top: var(--spacer);
+              
             }
           }
           @media (max-width: 450px) {
@@ -382,6 +383,10 @@
               @media (max-width: 768px) {
                 background-size: 110%;
                 background-position: 280%;
+              }
+              @media (max-width: 450px) {
+                background-size: 80%;
+                background-position: -40% 90%;
               }
             }
           }
